--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,7 +1,37 @@
 .Card {
-    width: 300px;
-    height: 350px;
-    background-color: blueviolet;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 330px;
+    height: 400px;
     border: 1px solid black;
+    border-radius: 5px;
     margin-bottom: 15px;
+}
+
+.card-img {
+    width: 80%;
+    align-self: center;
+    padding-bottom: 10px;
+}
+
+.productName {
+    width: 300px;
+    margin-bottom: 7px;
+}
+
+.next-to {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 20px;
+}
+
+
+.rating {
+    margin-right: 160px;
+}
+
+.viewBtn {
+    width: 80px;
+    align-self:center;
 }
