--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,3 +1,9 @@
+.page-div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .Card {
     display: flex;
     flex-direction: column;
@@ -10,7 +16,7 @@
 }
 
 .card-img {
-    width: 80%;
+    width: 60%;
     align-self: center;
     padding-bottom: 10px;
 }
