--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -10,9 +10,11 @@
     align-items: center;
     width: 330px;
     height: 400px;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.212);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 5px;
     margin-bottom: 15px;
+    
 }
 
 .card-img {
@@ -38,6 +40,14 @@
 }
 
 .viewBtn {
-    width: 80px;
     align-self:center;
+    width: 300px;
+    height: 50px;
+    color: white;
+    font-size: larger;
+    background-color: rgba(3, 0, 12, 0.973);
+    border: 1.5px solid rgba(0, 0, 0, 0.39);
+    border-radius: 5px;
+    cursor: pointer;
 }
+
