--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,28 +1,59 @@
 .modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(240, 240, 240, 0.74);
-    position: fixed;
+    background-color: rgba(26, 26, 26, 0.705);
     display: flex;
     justify-content: center;
     align-items: center;
+  
 }
 
 .Modal {
-    width: 300px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 850px;
     height: 50%;
     background-color: white;
+    position: relative;
+    transition: 0.2s;
+}
+
+.modal-img {
+    /* align-self: flex-start; */
+    width: 300px;
+    height: 400px;
+}
+
+.item-info {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    max-width: 350px;
+
+}
+
+.colors {
+   display: inline-flex;
+   
+    
 }
 
 
-
 .closeBtn {
-    display: flex;
-    margin: 5px;
-    padding: 5px;
+    position: absolute;
+    top:10px;
+    right:10px;
     color: white;
     background-color: rgba(3, 0, 12, 0.973);
     border: 1px solid rgba(0, 0, 0, 0.521);
     border-radius: 3px;
-    /* justify-self: flex-end; */
+    display: flex;
+    align-items: end;
+    cursor: pointer;
+    width: 20px;
+    padding: 5px;
 }
