--- a/src/components/ColorShape/colorshape.css
+++ b/src/components/ColorShape/colorshape.css
@@ -5,3 +5,9 @@
     border: 1px solid black;
     border-radius: 20px;
 }
+
+.color-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
