--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   justify-content: center;
 }
@@ -12,4 +12,14 @@
   align-items: center;
   text-align: center;
   margin: 40px;
+}
+
+nav{
+  display: block;
+  align-items: center;
+  height: 50px;
+  color: white;
+  font-size: x-large;
+  background-color: rgba(3, 0, 12, 0.973);
+  padding: 10px;
 }
