--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -10,33 +10,35 @@
     align-items: center;
     width: 330px;
     height: 400px;
-    border: 1px solid rgba(0, 0, 0, 0.212);
+    /* border: 1px solid rgba(0, 0, 0, 0.212); */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    border-radius: 5px;
+    border-radius: 2px;
     margin-bottom: 15px;
     
 }
 
 .card-img {
     width: 60%;
+    height: auto;
     align-self: center;
     padding-bottom: 10px;
 }
 
 .productName {
-    width: 300px;
-    margin-bottom: 7px;
+    width: 310px;
+    height: 40px;
+    margin: 10px 0;
 }
 
 .next-to {
     display: flex;
-    justify-content: space-around;
-    padding-bottom: 20px;
+    justify-content: space-between;
+    padding-bottom: 0 10px;
 }
 
 
 .rating {
-    margin-right: 160px;
+    margin-right: 135px;
 }
 
 .viewBtn {
@@ -44,10 +46,17 @@
     width: 300px;
     height: 50px;
     color: white;
-    font-size: larger;
+    font-weight: bold;
+    font-size: medium;
     background-color: rgba(3, 0, 12, 0.973);
     border: 1.5px solid rgba(0, 0, 0, 0.39);
-    border-radius: 5px;
+    border-radius: 2px;
     cursor: pointer;
+    margin: 10px 0;
+}
+
+.viewBtn:hover {
+    text-decoration: underline;
+    
 }
 
